# msdocs-fastapi-postgresql-sample-app

./: .env.sample  .env.sample.devcontainer  .gitignore  README.md  azure.yaml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: audit-bicep.yml  azure-dev.yml  format.yml  main_msdocs-python-postgres-rtt.yml  main_msdocs-python-postgres-yui.yml
infra/: main.bicep  resources.bicep
src/: entrypoint.sh  gunicorn.conf.py  my_uvicorn_worker.py  pyproject.toml  requirements.txt
src/fastapi_app/: app.py  models.py  seed_data.py
src/templates/: base.html  create_restaurant.html  details.html  index.html  star_rating.html
